--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.51.0",
     "react-resizable-panels": "^2.0.12",
     "sonner": "^1.4.3",
+    "stripe": "^16.10.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
